# s3flow

./: .gitignore  pyproject.toml  readme.md  requirements.txt
config /: config.yaml  patterns.yaml
examples/: copy_common_addon_example.py  download_example.py  download_from_csv_example.py  move_example.py  sync_example.py
s3_case_helpers/: pid_mapping.py
s3_utils/: cli.py  copy.py  core.py  download.py  errors.py  move.py  sync.py  utils.py
