[tool.poetry]
name = "s3flow"
version = "0.1.0"
description = "Small S3 toolkit: sync/copy/move/download with parallelism and progress bars."
authors = ["Your Name <you@example.com>"]
readme = "readme.md"
packages = [{ include = "s3_utils" }]

[tool.poetry.dependencies]
python = ">=3.10,<4.0"
boto3 = "^1.34"
botocore = "^1.34"
typer = "^0.12"
PyYAML = "^6.0"
pandas = "^2.0"
tqdm = "^4.0"

[tool.poetry.scripts]
s3flow = "s3_utils.cli:app"
